# xbp-monitoring

./: .dockerignore  .env.example  .env.example.github  .gitignore  Cargo.toml  Dockerfile  README.md  install-systemd.sh  openapi.html  openapi.yaml  uninstall-systemd.sh
.cursor/rules/: rust-docs-styling-sheet.mdc
.github/workflows/: docker.yaml  lint.yaml  release.yaml  test.yaml
src/: app_state.rs  config.rs  main.rs
src/alerts/: mod.rs  model.rs
src/alerts/integrations/: mod.rs
src/otel/: metrics.rs  mod.rs  tracing.rs
src/probe/: expectations.rs  http_probe.rs  mod.rs  model.rs  probe_logic.rs  schedule.rs  variables.rs
src/web_server/: mod.rs  model.rs  probes.rs  prometheus_metrics.rs  reload.rs  stories.rs
