[package]
name = "xbp-monitoring"
version = "0.9.48"
authors = ["Floris @ floris@xylex.group"]
license = "MIT"
readme = "README.md"
edition = "2021"
description = "XBP-Monitoring is a synthetic monitoring framework that simplifies and automates the entire process. Optionally used in conjuction as plugin to XBP base"


[dependencies]
axum = { version = "0.7.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11" }
http = "1.1"
lazy_static = "1.4.0"
futures = "0.3.29"
wiremock = "0.5.22"
chrono = { version = "0.4.31", features = ["serde"] }
regex = "1.10.3"
uuid = { version = "1", features = ["v4"] }
opentelemetry = { version = "0.29", features = ["metrics"] }
opentelemetry-http = "0.29"
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.29", features = [
    "metrics",
    "http-json",
    "http-proto",
    "reqwest-client",
    "grpc-tonic",
] }
opentelemetry-semantic-conventions = "0.29"
clap = { version = "4.5.4", features = ["derive"] }
opentelemetry-stdout = { version = "0.29", features = ["metrics", "trace"] }
opentelemetry-prometheus = "0.29.1"
prometheus = "0.14.0"
